liblumen_codegen/src/mlir/builder/ffi.rs


    pub fn MLIRBuildConstantFloat(builder: ModuleBuilderRef, value: f64) -> ValueRef;
    pub fn MLIRBuildFloatAttr(builder: ModuleBuilderRef, value: f64) -> AttributeRef;
    pub fn MLIRBuildConstantInt(builder: ModuleBuilderRef, value: i64) -> ValueRef;
    pub fn MLIRBuildIntAttr(builder: ModuleBuilderRef, value: i64) -> AttributeRef;
    pub fn MLIRBuildConstantBigInt(
        builder: ModuleBuilderRef,
        value: *const libc::c_char,
        width: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildBigIntAttr(
        builder: ModuleBuilderRef,
        value: *const libc::c_char,
        width: libc::c_uint,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantAtom(
        builder: ModuleBuilderRef,
        value: *const libc::c_char,
        id: u64,
    ) -> ValueRef;
    pub fn MLIRBuildAtomAttr(
        builder: ModuleBuilderRef,
        value: *const libc::c_char,
        id: u64,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantBinary(
        builder: ModuleBuilderRef,
        value: *const libc::c_char,
        size: libc::c_uint,
        header: u64,
        flags: u64,
    ) -> ValueRef;
    pub fn MLIRBuildBinaryAttr(
        builder: ModuleBuilderRef,
        value: *const libc::c_char,
        size: libc::c_uint,
        header: u64,
        flags: u64,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantNil(builder: ModuleBuilderRef) -> ValueRef;
    pub fn MLIRBuildNilAttr(builder: ModuleBuilderRef) -> AttributeRef;
    pub fn MLIRBuildConstantList(
        builder: ModuleBuilderRef,
        elements: *const AttributeRef,
        num_elements: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildListAttr(
        builder: ModuleBuilderRef,
        elements: *const AttributeRef,
        num_elements: libc::c_uint,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantTuple(
        builder: ModuleBuilderRef,
        elements: *const AttributeRef,
        num_elements: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildTupleAttr(
        builder: ModuleBuilderRef,
        elements: *const AttributeRef,
        num_elements: libc::c_uint,
    ) -> AttributeRef;
    pub fn MLIRBuildConstantMap(
        builder: ModuleBuilderRef,
        elements: *const KeyValuePair,
        num_elements: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildMapAttr(
        builder: ModuleBuilderRef,
        elements: *const KeyValuePair,
        num_elements: libc::c_uint,
    ) -> AttributeRef;

    //---------------
    // Type Checking
    //---------------

    pub fn MLIRBuildIsTypeTupleWithArity(
        builder: ModuleBuilderRef,
        value: ValueRef,
        arity: libc::c_uint,
    ) -> ValueRef;
    pub fn MLIRBuildIsTypeList(builder: ModuleBuilderRef, value: ValueRef) -> ValueRef;
    pub fn MLIRBuildIsTypeNonEmptyList(builder: ModuleBuilderRef, value: ValueRef) -> ValueRef;
    pub fn MLIRBuildIsTypeNil(builder: ModuleBuilderRef, value: ValueRef) -> ValueRef;
    pub fn MLIRBuildIsTypeMap(builder: ModuleBuilderRef, value: ValueRef) -> ValueRef;
    pub fn MLIRBuildIsTypeNumber(builder: ModuleBuilderRef, value: ValueRef) -> ValueRef;
    pub fn MLIRBuildIsTypeFloat(builder: ModuleBuilderRef, value: ValueRef) -> ValueRef;
    pub fn MLIRBuildIsTypeInteger(builder: ModuleBuilderRef, value: ValueRef) -> ValueRef;
    pub fn MLIRBuildIsTypeFixnum(builder: ModuleBuilderRef, value: ValueRef) -> ValueRef;
    pub fn MLIRBuildIsTypeBigInt(builder: ModuleBuilderRef, value: ValueRef) -> ValueRef;
}
